<?xml version="1.0"?>
<package>
  <name>proj4</name>
  <version>0.0.0</version>
  <description>Proj4 lib package</description>

  <maintainer email="rh@tinymobilerobots.dk">dimx</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
